NR: require Eryssa to survive

--- a/data/campaigns/Northern_Rebirth/utils/herodeaths.cfg
+++ b/data/campaigns/Northern_Rebirth/utils/herodeaths.cfg
@@ -826,19 +826,17 @@
                     speaker=Elenia
                     message= _ "Eryssa, no! Please don’t die!"
                 [/message]
-
-                [message]
-                    speaker=Tallin
-                    message= _ "I am sorry, Elenia, we tried our best. (<i>Sigh</i>) I will never forget you, Eryssa."
-                [/message]
             [/then]
-            [else]
-                [message]
-                    speaker=Tallin
-                    message= _ "You wretches are going to pay for this! FORWARD, MEN!"
-                [/message]
-            [/else]
         [/if]
+
+        [message]
+            speaker=Tallin
+            message= _ "How could this happen? We can’t possibly go on without her..."
+        [/message]
+
+        [endlevel]
+            result=defeat
+        [/endlevel]
     [/event]
 #enddef
 
