NR: require Eryssa to survive if you have her

--- a/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg
@@ -480,6 +480,15 @@
                 description= _ "Death of Ro’Sothian"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Eryssa"
+                condition=lose
+                [show_if]
+                    [have_unit]
+                        id=Eryssa
+                    [/have_unit]
+                [/show_if]
+            [/objective]
 
             {TURNS_RUN_OUT}
 
