--- a/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
@@ -955,6 +955,15 @@
                 description= _ "Death of Hamel"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Eryssa"
+                condition=lose
+                [show_if]
+                    [have_unit]
+                        id=Eryssa
+                    [/have_unit]
+                [/show_if]
+            [/objective]
 
             {IS_LAST_SCENARIO}
             {AI_CONTROLLER_NOTE}
