--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -432,6 +432,15 @@
                 condition=lose
             [/objective]
             [objective]
+                description= _ "Death of Eryssa"
+                condition=lose
+                [show_if]
+                    [have_unit]
+                        id=Eryssa
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
                 description= _ "Turns run out"
                 condition=lose
                 show_turn_counter=yes
