--- a/data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg
@@ -321,6 +321,9 @@
             [note]
                 description= _ "Even if your rescue fails, you will still advance to the next scenario"
             [/note]
+            [note]
+                description= _ "You will win this scenario immediately upon moving onto the hex containing the Princess’s cage"
+            [/note]
         [/objectives]
     [/event]
 
@@ -386,14 +389,19 @@
         [/unit]
 
         [message]
+            race=orc
+            message= _ "The intruders are breaking in! Get to the walls and defend the fortress! And where did that Elvish Princess go?"
+        [/message]
+
+        [message]
             speaker=Eryssa
-            message= _ "I am free! Thank you, my saviors. Who has come to rescue me from vile captivity?"
+            message= _ "(<i>hushed</i>) Thank you, my saviors. Who has come to rescue me from vile captivity?"
         [/message]
 
         [message]
             speaker=Tallin
             # wmllint: local spelling outta
-            message= _ "Later, princess, first let’s get outta — uh, let us take our leave of this place as swiftly as may be!"
+            message= _ "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us take our leave of this place as swiftly as may be!"
         [/message]
 
         [message]
