UtBS S2: implement recruitment limitations via ai
Handles recruitment of l2s via recruitment_instructions
instead of using events

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -75,6 +75,24 @@
                 [/criteria]
             [/goal]
         [/ai]
+        # limit recruitment to one bandit and trapper
+        [ai]
+            [aspect]
+                id=recruitment_instructions
+                [facet]
+                    [value]
+                        [limit]
+                            type=Bandit
+                            max=1
+                        [/limit]
+                        [limit]
+                            type=Trapper
+                            max=1
+                        [/limit]
+                    [/value]
+                [/facet]
+            [/aspect]
+        [/ai]
         {FLAG_VARIANT6 ragged}
     [/side]
 
@@ -1465,32 +1483,6 @@
             {INCOME 9 11 13}
             {GOLD 100 125 150}
         [/modify_side]
-    [/event]
-
-    # limit recruitment to one bandit and trapper
-    [event]
-        name=recruit
-        first_time_only="yes"
-        [filter]
-            side=2
-            type=Bandit
-        [/filter]
-        [disallow_recruit]
-            side=2
-            type=Bandit
-        [/disallow_recruit]
-    [/event]
-    [event]
-        name=recruit
-        first_time_only="yes"
-        [filter]
-            side=2
-            type=Trapper
-        [/filter]
-        [disallow_recruit]
-            side=2
-            type=Trapper
-        [/disallow_recruit]
     [/event]
 
     #Encounter 7 Mirage
