UtBS S3-S4: Rename some variables

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
@@ -300,7 +300,7 @@
             halo=halo/fire-aura.png
         [/item]
 
-        {VARIABLE sneak_up 0}
+        {VARIABLE sneak_up no}
         {VARIABLE killed_by_azkotep 0}
         {VARIABLE killed_by_ystara 0}
         {VARIABLE grak_defeated 0}
@@ -1756,7 +1756,7 @@
                         speaker=Nym
                         message=_"Right, sorry. Damn creeps."
                     [/message]
-                    {VARIABLE sneak_up 1}
+                    {VARIABLE sneak_up yes}
                 [/then]
                 [else]
                     [message]
