--- a/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
@@ -233,10 +233,7 @@
         [/recall]
 
         #initialize variables
-        [set_variable]
-            name=naga_ambush
-            value=0
-        [/set_variable]
+        {VARIABLE naga_ambush no}
 
         #close one of the two northern tunnels
         {RANDOM 1..10}
@@ -330,7 +327,7 @@
         [if]
             [variable]
                 name=sneak_up
-                equals=1
+                boolean_equals=yes
             [/variable]
             [then]
                 [remove_shroud]
@@ -343,7 +340,7 @@
             [/then]
         [/if]
 
-        {CLEAR_VARIABLE sneak_up}
+        {CLEAR_VARIABLE random,sneak_up}
     [/event]
 
     # starting dialogue
@@ -523,7 +520,7 @@
         [filter_condition]
             [variable]
                 name=naga_ambush
-                numerical_equals=0
+                boolean_equals=no
             [/variable]
         [/filter_condition]
 
@@ -688,7 +685,7 @@
         [if]
             [variable]
                 name=naga_ambush
-                numerical_equals=0
+                boolean_equals=no
             [/variable]
 
             [then]
